# FdF

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: CI.yml
2DGraphics/: Makefile
2DGraphics/includes/: DD_Graphics.h  DD_Graphics_internal.h
2DGraphics/sources/: DD_Graphics.c  draw.c  infos.c
3DGraphics/: Makefile
3DGraphics/includes/: DDD_Graphics.h  DDD_Graphics_internal.h
3DGraphics/sources/: DDD_Graphics.c  draw.c  funcs.c  load_fdf_file.c  model.c  object.c  projection.c  projection_matrices.c  rotation.c  scale.c  translate.c  utils.c
Libft/: Makefile
Libft/sources/: ft_memchr.c  ft_memmove.c  identity_matrix.c  torad.c
MiniLibXWrapper/: Makefile
MiniLibXWrapper/includes/: wrapped_mlx.h  wrapped_mlx_internal.h
MiniLibXWrapper/sources/: keyboard_event.c  mouse_event.c  mouse_move_event.c  on_window_event.c  wrapped_mlx.c  wrappers.c
includes/: fdf.h
sources/: actions.c  actions2.c  actions3.c  arguments.c  error.c  fdf.c  main.c  print.c
unistd/: unistd.h
